--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~9.1.13",
     "@types/dat-gui": "^0.6.3",
     "@types/p5": "^0.9.1",
+    "@types/suncalc": "^1.8.0",
     "@types/three": "^0.127.0",
     "D": "^1.0.0",
     "babel-eslint": "^10.1.0",
@@ -38,6 +39,7 @@
     "save": "^2.4.0",
     "save-dev": "0.0.1-security",
     "standard": "^16.0.3",
+    "suncalc": "^1.8.0",
     "three": "^0.127.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
